tools/hermes/tests/ui/fail_precondition.rs
/// ```lean, hermes
//~^ ERROR: Unclosed Hermes block in documentation
unsafe fn unsafe_op(x: u32) -> u32 { x }
